💄Fix bottom spacing on pages.

--- a/src/assets/style/_overrides.scss
+++ b/src/assets/style/_overrides.scss
@@ -116,3 +116,11 @@ address {
 .is-pulled-left {
   margin-right: 1rem;
 }
+
+.section {
+  padding-bottom: 0;
+}
+
+.list {
+  margin-bottom: 3rem;
+}
